# Alignment-Atlas

./: .gitignore  README.md  app.py  figures_pipeline.py  pyproject.toml
.github/workflows/: deploy_prod.yml  deploy_staging.yml
deploy/: README.md  alignment-atlas.service  grobid.service
scripts/: build_figures_jsonl_from_logs.py
src/alignment_atlas/: __init__.py
src/alignment_atlas/figures/: README.md  __init__.py  captioner.py  cli.py  extractor.py  pipeline.py  schemas.py  utils.py  vision_api.py
src/alignment_atlas/figures/tests/: __init__.py  test_cache.py  test_captioner.py
src/app/: chat_agent.py  ingest_guardrails.py  services.py  storage.py  streamlit_app.py  web_app.py
src/ingest/: 05_build_kg.py  cli.py  pipeline.py  stages.py
src/retrieval/: citations.py  external_fallback.py  generate_answer_openai.py  retriever.py
tests/: test_chat_fallback.py  test_figures_kg_integration.py
