[project]
name = "alignment-atlas"
version = "0.1.0"
description = "A research corpus pipeline for AI alignment papers"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.116.1",
    "gradio>=5.49.1",
    "huggingface-hub>=0.35.3",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "plotly>=6.5.2",
    "pypdf>=6.7.1",
    "requests>=2.32",
    "sentencepiece>=0.2.1",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "uvicorn>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
